ncc/testsuite/positive/implicit-struct-ctor.n
module M {
  struct X {
    public mutable x : int;
    public mutable y : double;
  }
  
  print (x : X) : void
  {
    Nemerle.IO.printf ("%d %f\n", x.x, x.y)
  }
  
  public Main ()  : void
  {
    print (X ());
    def x = X();
    x.x = 7;
    x.y = 1.0;
    print (x);
  }
}

/*
0 0
7 1
*/
module M {
  struct X {
    public mutable x : int;
    public mutable y : double;
  }

  print (x : X) : void
  {
    Nemerle.IO.printf ("%d %f\n", x.x, x.y)
  }

  public Main ()  : void
  {
    print (X ());
    def x = X();
    x.x = 7;
    x.y = 1.0;
    print (x);
  }
}

/*
0 0
7 1
*/
