ncc/testsuite/negative/Issue-1268.n
public module Program
{
  Main(): void
  {
    def f (x, y)
    {
      def f (x) 
      {
        f(x, y) // E: in argument \#1, needed a \?, got \(\? \* \?\): the element with index 0 in tuple '\(\? \* \?\)' is recursive\. This bug can be caused by the parametr to tuple transformation\.
      };

      if (x <= 0)
        y
      else
        f (x,1) + y 
    }

    f(1,3);
  }
}
